bundles/github/connector/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ibm-grpc-github-connector
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: ibm-grpc-github-connector
  labels:
    app: ibm-grpc-github-connector
    instance: connector
spec:
  selector:
    app: ibm-grpc-github-connector
    instance: connector
  ports:
    - name: webhook
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: metrics
      protocol: TCP
      port: 9443
      targetPort: 9443
